# pylint-ignore

./: .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  Makefile.bootstrapit.make  README.md  bootstrapit.sh  pyproject.toml  renovate.json  setup.cfg  setup.py
.github/workflows/: ci-uv.yml  ci.yml  docker-publish.yml
requirements/: conda.txt  integration.txt  pypi.txt
scripts/: bootstrapit_update.sh
src/pylint_ignore/: __init__.py
